--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "empty-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/apikit.empty/",
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.10",
